# basic-string

./: BasicString.hpp  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: BasicString.hpp
test/: test.cpp
